alignment and font bug fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,14 +45,8 @@ header nav ul li {
 header nav ul li a {
     margin: 0 30px;
     font-size: 18px;
+    font-family: 'Gill Sans', 'Gill Sans MT', sans-serif;
 }
-
-
-/* DELETE?*/
-p {
-    font-size: 16px;
-}
-
 
 /* hero style start */
 .hero {
@@ -64,7 +58,7 @@ p {
     position: relative;
 }
 
-/* services and benefits styles start */
+/* services styles start */
 .services {
     width: 78%;
     float: left;
@@ -80,14 +74,15 @@ p {
 }
 
 .service img {
-    width: 35%;
+    width: 37%;
     float: left;
+    margin-right: 20px;    
 }
 
 .service-detail {
-    padding: 0 20px 0 20px;
+    padding-right: 20px;
     float: left;
-    width: 65%;
+    width: 60%;
 }
 
 .service h2 {
@@ -96,7 +91,7 @@ p {
 }
 
 .service p {
-    font-size: 17px;
+    font-size: 16px;
     line-height: 1.3;
 }
 
@@ -118,7 +113,7 @@ p {
     float: left;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', sans-serif;
     background-color: #2589bd;
     margin: 0 0 0 0;
 }
